--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
 		"define-data-property": "^1.1.4",
 		"es-object-atoms": "^1.0.0",
 		"get-intrinsic": "^1.2.6",
+		"get-proto": "^1.0.0",
 		"has-symbols": "^1.1.0",
-		"reflect.getprototypeof": "^1.0.9",
 		"set-function-name": "^2.0.2"
 	},
 	"devDependencies": {
